--- a/theme/mojave.less
+++ b/theme/mojave.less
@@ -13,7 +13,7 @@
                 margin: 0;
             }
             .app-chrome--left > div:nth-of-type(3) {
-                margin-left: calc(var(--sidebarWidth)/1.8);
+                margin-left: calc(var(--sidebarWidth)/1.5);
                 transition     : margin-left 0.35s var(--appleEase);
             }
 
